3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------

Changes for CVS:

doc/Protocol: update information for the mapcmd, add map1cmd to
   section of setup commands.
include/newserver.h,socket/init.c: add map1cmd element to socket structure that
    determines which protocol (map,map1) will be used for sending the
    map.
socket/request.c:add 'map1cmd' to list of setup options.  when sending
    the map, use the map1cmd element to determine what protocol command
    to use to send it.
MSW 2001-06-07

server/shop.c: Fix bug that resulted in items in shop being paid,
as well as not generating proper listing.  MSW 2001-06-06.

Checkin of code that supports larger map sizes (configurable in
config.h).
common/los.c: update los code since it only handled 11x11 maps.  Now
    uses formulatic approach so any map size should be supported.  This
    does result in a few more spaces getting blocked around corners,
    but it doesn't seem that bad - certainly not compared to the ability
    to have larger viewable maps.
common/map.c, crossedit/CrEdit.c, crossedit/Edit.c, include/global.h, 
    include/map.h,random_maps/monster.c,random_maps/special.c,
    random_maps/standalone.c, server/apply.c,server/c_misc.c,
    server/spell_effect.c,socket/info.c:
    change mapx,mapy to what they really point to,
    as it prevented using those as variable/structure element names.
common/object.c: update_position - if faces for different layers are
    duplicate, set the duplicates to be blank to increase client
    update efficiency.
doc/Protocol: Add map1 command description, update setup command to
    describe setting of mapsize.
include/config.h: add MAP_CLIENT_X/Y to set maximum map size we can